# admin-tool-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-v1  Dockerfile-v2  INSTALL.md  constraints.txt  main.py  requirements-v2.txt  requirements.txt  vercel.json
api/: main.py
parse-any-doc/: README.md  pyproject.toml  requirements.txt  setup.py
parse-any-doc/notebook/: doc_parse.ipynb
parse-any-doc/src/audit_logger/: __init__.py  audit_logger.py
parse-any-doc/src/doc_parser/: README.md  agentBankStatement.py  agentTaxInvoice.py  docxMd.py  paddleMd.py  pandle_test.py
parse-any-doc/src/llms/: llm_model.py
parse-any-doc/src/util_tool/: auth.py  gmail_helper.py  users.db  util.py
