[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-any-doc"
version = "0.1.0"
authors = [
  { name = "Sheng Gao", email = "goseng123@gmail.com" }
]
description = "A package for parsing various document types."
readme = "README.md"
license = { text = "MIT" }  # Update if using a different license
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependencies
dependencies = [
    "paddleocr",
    "pandas",
    "docx2txt",
    # Add other runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black"
]

[project.urls]
"Homepage" = "https://github.com/aigaosheng/parse-any-doc"
"Bug Tracker" = "https://github.com/aigaosheng/parse-any-doc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"